# md5rs-client

./: .gitignore  CHANGE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: main.yml
certs/: cert.pem
proto/: md5rs.proto  object_detection.proto
src/: client.rs  export.rs  lib.rs  log.rs  main.rs  media.rs  server.rs  utils.rs
