[package]
name = "md5rs-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "md5rs-server"
path = "src/server.rs"

[[bin]]
name = "md5rs-client"
path = "src/client.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
crossbeam = "0.8.4"
async-stream = "0.3.6"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
