[package]
name = "md5rs-client"
version = "0.1.3"
edition = "2021"

[dependencies]
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
async-stream = "0.3.6"
uuid = { version = "1.11.0", features = ["v4"] }
ffmpeg-sidecar = "2.0.2"
image = "0.25.5"
jpeg-decoder = "0.3.1"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "local-time",
    "env-filter",
] }
walkdir = "2.5.0"
anyhow = "1.0.90"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
crossbeam-channel = "0.5.13"
csv = "1.3.0"
fast_image_resize = { version = "5.0.0", features = ["rayon"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
nom-exif = "2.2.0"
rayon = "1.10.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
webp = "0.3.0"
toml = "0.8.19"
itertools = "0.13.0"
url = "2.5.2"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
lto = true
strip = true
codegen-units = 1